Added a countries drawer
- Still needs some design + styling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,33 @@
   </div>
 
 
-  <!--  -->
+  <!-- Country list info drawers  -->
+  <div class="info-drawer" data-region="north-america">
+    <ul class="country-list"></ul>
+  </div>
+
+  <div class="info-drawer" data-region="south-america">
+    <ul class="country-list"></ul>
+  </div>
+
+  <div class="info-drawer" data-region="europe">
+    <ul class="country-list"></ul>
+  </div>
+
+  <div class="info-drawer" data-region="asia">
+    <ul class="country-list"></ul>
+  </div>
+
+  <div class="info-drawer" data-region="oceania">
+    <ul class="country-list"></ul>
+  </div>
+
+  <div class="info-drawer" data-region="africa">
+    <ul class="country-list"></ul>
+  </div>
+
+
+  <!-- Game stage -->
   <div id="map"></div>
   <div class="stage">
 
@@ -93,16 +119,7 @@
           </span>
         </li>
       </ul>
-    </div>
-
-
-    <!-- -->
-    <div class="info-drawer" data-region="north-america">
-      <ul class="country-list">
-        <li class="country-list-item">Testing</li>
-        <li class="country-list-item">Testing</li>
-        <li class="country-list-item">Testing</li>
-      </ul>
+      <div class="instructions">Click on a continent above to view the countries you have entered.</div>
     </div>
 
 
