Start Screen prematurely disappearing
- Fixed the start screen from disappearing when an incorrect answer is given on the first try.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <!-- Country list info drawers  -->
   <div class="info-drawer" data-region="north-america">
+    <div class="info-drawer-message">Nothing here yet. Fill in your first country to get your list going.</div>
     <ul class="country-list"></ul>
   </div>
 
