--- a/index.html
+++ b/index.html
@@ -27,27 +27,32 @@
 
   <!-- Country list info drawers  -->
   <div class="info-drawer" data-region="north-america">
-    <div class="info-drawer-message">Nothing here yet. Fill in your first country to get your list going.</div>
+    <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
     <ul class="country-list"></ul>
   </div>
 
   <div class="info-drawer" data-region="south-america">
+    <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
     <ul class="country-list"></ul>
   </div>
 
   <div class="info-drawer" data-region="europe">
+    <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
     <ul class="country-list"></ul>
   </div>
 
   <div class="info-drawer" data-region="asia">
+    <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
     <ul class="country-list"></ul>
   </div>
 
   <div class="info-drawer" data-region="oceania">
+    <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
     <ul class="country-list"></ul>
   </div>
 
   <div class="info-drawer" data-region="africa">
+    <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
     <ul class="country-list"></ul>
   </div>
 
