--- a/index.html
+++ b/index.html
@@ -28,32 +28,56 @@
   <!-- Country list info drawers  -->
   <div class="info-drawer" data-region="north-america">
     <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
-    <ul class="country-list"></ul>
+    <div class="info-drawer-content nano">
+      <div class="nano-content">
+        <ul class="country-list"></ul>
+      </div>
+    </div>
   </div>
 
   <div class="info-drawer" data-region="south-america">
     <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
-    <ul class="country-list"></ul>
+    <div class="info-drawer-content nano">
+      <div class="nano-content">
+        <ul class="country-list"></ul>
+      </div>
+    </div>
   </div>
 
   <div class="info-drawer" data-region="europe">
     <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
-    <ul class="country-list"></ul>
+    <div class="info-drawer-content nano">
+      <div class="nano-content">
+        <ul class="country-list"></ul>
+      </div>
+    </div>
   </div>
 
   <div class="info-drawer" data-region="asia">
     <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
-    <ul class="country-list"></ul>
+    <div class="info-drawer-content nano">
+      <div class="nano-content">
+        <ul class="country-list"></ul>
+      </div>
+    </div>
   </div>
 
   <div class="info-drawer" data-region="oceania">
     <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
-    <ul class="country-list"></ul>
+    <div class="info-drawer-content nano">
+      <div class="nano-content">
+        <ul class="country-list"></ul>
+      </div>
+    </div>
   </div>
 
   <div class="info-drawer" data-region="africa">
     <div class="info-drawer-message">Nothing here yet. Fill in your first country related to this continent.</div>
-    <ul class="country-list"></ul>
+    <div class="info-drawer-content nano">
+      <div class="nano-content">
+        <ul class="country-list"></ul>
+      </div>
+    </div>
   </div>
 
 
@@ -125,7 +149,7 @@
           </span>
         </li>
       </ul>
-      <div class="instructions">Click on a continent above to view the countries you have entered.</div>
+      <div class="instructions">Click on a continents above to view the countries you have entered.</div>
     </div>
 
 
@@ -145,5 +169,7 @@
   <script src="js/google_map.js"></script>
   <script src="js/timer.js"></script>
   <script src="js/functions.js"></script>
+  <script src="js/vendor/jquery.nanoscroller.min.js"></script>
+  <script src="js/vendor/debounce.js"></script>
 </body>
 </html>
