Removed the '.' from 'Give Up.'

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 
     <!-- -->
-    <div class="btn-give-up">Give Up.</div>
+    <div class="btn-give-up">Give Up</div>
 
 
     <!-- Button used by the google map fusion layer to update the map -->
