Improved the drawer system
- The drawers only slide open and closed when no drawer was previously open
- The drawers now have titles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <!-- Country list info drawers  -->
   <div class="info-drawer" data-region="north-america">
+    <div class="info-drawer-title">North America</div>
     <div class="info-drawer-content nano">
       <div class="nano-content">
         <ol class="country-list"></ol>
@@ -35,6 +36,7 @@
   </div>
 
   <div class="info-drawer" data-region="south-america">
+    <div class="info-drawer-title">South America</div>
     <div class="info-drawer-content nano">
       <div class="nano-content">
         <ol class="country-list"></ol>
@@ -43,6 +45,7 @@
   </div>
 
   <div class="info-drawer" data-region="europe">
+    <div class="info-drawer-title">Europe</div>
     <div class="info-drawer-content nano">
       <div class="nano-content">
         <ol class="country-list"></ol>
@@ -51,6 +54,7 @@
   </div>
 
   <div class="info-drawer" data-region="asia">
+    <div class="info-drawer-title">Asia</div>
     <div class="info-drawer-content nano">
       <div class="nano-content">
         <ol class="country-list"></ol>
@@ -59,6 +63,7 @@
   </div>
 
   <div class="info-drawer" data-region="oceania">
+    <div class="info-drawer-title">Oceania</div>
     <div class="info-drawer-content nano">
       <div class="nano-content">
         <ol class="country-list"></ol>
@@ -67,6 +72,7 @@
   </div>
 
   <div class="info-drawer" data-region="africa">
+    <div class="info-drawer-title">Africa</div>
     <div class="info-drawer-content nano">
       <div class="nano-content">
         <ol class="country-list"></ol>
