Disabled input + focus features
- On pause and forfeit the input is now disabled, preventing cheating
- On key press the :focus goes to the input

--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     </div>
   </div>
 
+  <!-- Game over overlay -->
+  <div class="map-overlay-wrapper gameover-overlay">
+    <div class="map-overlay-container">
+      <div class="instructions-dialogue">You've given up.</div>
+    </div>
+  </div>
+
 
   <!-- Country list info drawers  -->
   <div class="info-drawer" data-region="north-america">
@@ -128,7 +135,7 @@
       <div class="instructions">Type your answers below</div>
       <input type="text" id="input" class="answer-input">
       <div class="checkbox-container">
-        <input type="checkbox" id="panTo" class="checkbox-input">
+        <input type="checkbox" id="panTo" class="checkbox-input" checked="checked">
         <label for="panTo" class="checkbox-label">Pan map as you answer</label>
       </div>
     </div>
@@ -174,7 +181,7 @@
           </span>
         </li>
       </ul>
-      <div class="instructions">Click on a continents above to view the countries you have entered</div>
+      <div class="instructions">Click on the continents above to view the countries you have entered</div>
     </div>
 
 
